--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "prepack": "yarn build",
     "printversion": "node -p \"require('./package.json').version\""
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.8.7",
