--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,16 +29,15 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      # Step 3: Clean install with legacy-peer-deps
-      - name: Clean install dependencies
-        run: |
-          npm ci --legacy-peer-deps
-
-      # Step 4: Uninstall node-sass and install sass
+      # Step 3: Force uninstall `node-sass` and install `sass`
       - name: Replace node-sass with sass
         run: |
-          npm uninstall node-sass --legacy-peer-deps
+          npm uninstall node-sass --force
           npm install sass --save-dev --legacy-peer-deps
+
+      # Step 4: Install remaining dependencies
+      - name: Install dependencies
+        run: npm install --legacy-peer-deps
 
       # Step 5: Run the build
       - name: Build the project
