--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "file-loader": "^1.1.11",
     "jest": "25.3.0",
     "lorem-ipsum": "1.0.4",
-    "node-sass": "^4.13.1",
+    "sass": "^1.32.8",
     "postcss-loader": "^2.1.4",
     "prettier": "^1.11.1",
     "sass-loader": "^6.0.7",
