--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,20 +29,26 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      # Step 3: Uninstall node-sass and install sass
-      - name: Replace node-sass with sass
-        run: |
-          npm uninstall node-sass --force
-          npm install sass --save-dev --legacy-peer-deps
+      # Step 3: Uninstall node-sass
+      - name: Uninstall node-sass
+        run: npm uninstall node-sass --force
 
-      # Step 4: Install dependencies
-      - name: Install Dependencies
+      # Step 4: Install Dart Sass
+      - name: Install Dart Sass
+        run: npm install sass --save-dev --legacy-peer-deps
+
+      # Step 5: Update ESLint
+      - name: Update ESLint
+        run: npm install eslint@^5.0.0 --save-dev --legacy-peer-deps
+
+      # Step 6: Install dependencies
+      - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      # Step 5: Run the build
+      # Step 7: Build the project
       - name: Build the project
         run: npm run build
 
-      # Step 6: Run tests (optional)
+      # Step 8: Run tests
       - name: Run tests
         run: npm test
