--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "build": "NODE_ENV=production webpack",
     "eslint": "eslint --color --fix webpack*.js src",
-    "start": "NODE_ENV=development webpack-serve --port 9090 --host 0.0.0.0 webpack.dev.config.js",
+    "start": "NODE_ENV=development webpack serve --port 9090 --host 0.0.0.0 webpack.dev.config.js",
     "storybook": "start-storybook",
     "storybook-build": "build-storybook -c .storybook -o .storybook-dist",
     "test": "jest",
@@ -38,88 +38,71 @@
     "access": "public"
   },
   "dependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-react-jsx": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.0.0",
-    "babel-core": "^7.0.0-bridge",
-    "babel-eslint": "^9.0.0",
-    "babel-jest": "25.3.0",
-    "babel-loader": "^8.0.0",
-    "babel-plugin-lodash": "^3.3.2",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "eslint-plugin-babel": "^3.0.0",
-    "highlight.js": "^9.15.10",
-    "lodash": "^4.12.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "moment": ">= 2.6.0",
-    "prop-types": "^15.6.1",
-    "rc-notification": "^3.0.0",
-    "react": "16.13.1",
-    "react-day-picker": "7.1.9",
-    "react-dom": "16.13.1",
-    "react-hot-loader": "4.12.13",
-    "react-resize-detector": "5.0.4",
-    "redux": "^4.0.1",
-    "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0",
-    "vkbeautify": "^0.99.3",
-    "whatwg-fetch": "^3.0.0"
-  },
-  "standard": {
-    "parser": "babel-eslint",
-    "globals": [
-      "describe",
-      "it",
-      "beforeEach",
-      "before",
-      "after",
-      "afterEach"
-    ]
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.21.5",
+    "@babel/plugin-transform-react-jsx": "^7.21.5",
+    "@babel/plugin-transform-runtime": "^7.21.5",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.21.5",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-lodash": "^3.3.4",
+    "eslint-plugin-babel": "^5.3.1",
+    "highlight.js": "^11.0.1",
+    "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^2.6.1",
+    "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
+    "rc-notification": "^5.1.3",
+    "react": "^17.0.2",
+    "react-day-picker": "^7.4.10",
+    "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0",
+    "react-resize-detector": "^6.7.5",
+    "redux": "^4.2.1",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.4.2",
+    "vkbeautify": "^0.99.4",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-console": "^1.2.1",
-    "@storybook/addon-docs": "^5.3.18",
-    "@storybook/addon-info": "5.3.18",
-    "@storybook/react": "5.3.18",
-    "autoprefixer": "^8.3.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^0.15.6",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "1.15.2",
-    "enzyme-to-json": "^3.3.3",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jest": "^21.15.1",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "7.7.0",
-    "eslint-plugin-simple-import-sort": "^5.0.1",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.5.0",
-    "fetch-mock": "^9.0.0-beta.2",
-    "file-loader": "^1.1.11",
-    "jest": "25.3.0",
-    "lorem-ipsum": "1.0.4",
-    "sass": "^1.32.8",
-    "postcss-loader": "^2.1.4",
-    "prettier": "^1.11.1",
-    "sass-loader": "^6.0.7",
-    "storybook-readme": "^5.0.8",
-    "style-loader": "^0.21.0",
-    "svg-sprite-loader": "3.7.3",
-    "terser-webpack-plugin": "^2.3.5",
-    "url-loader": "^0.5.6",
-    "webpack": "4.40.2",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.1",
-    "webpack-serve": "^0.3.1"
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-console": "^1.2.3",
+    "@storybook/addon-docs": "^6.5.12",
+    "@storybook/addon-info": "^6.5.12",
+    "@storybook/react": "^6.5.12",
+    "autoprefixer": "^10.4.14",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "eslint": "^8.48.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-webpack": "^0.13.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-simple-import-sort": "^9.0.0",
+    "fetch-mock": "^9.11.0",
+    "file-loader": "^6.2.0",
+    "jest": "^29.7.0",
+    "lorem-ipsum": "^3.0.0",
+    "postcss-loader": "^7.0.0",
+    "prettier": "^3.0.0",
+    "sass": "^1.63.4",
+    "sass-loader": "^13.3.1",
+    "style-loader": "^3.3.3",
+    "svg-sprite-loader": "^7.0.0",
+    "terser-webpack-plugin": "^5.3.6",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^5.3.3",
+    "webpack-hot-middleware": "^2.25.3",
+    "webpack-serve": "^1.0.0"
   }
 }
