--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@babel/cli": "^7.21.5",
-    "@babel/core": "^7.21.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.21.5",
-    "@babel/plugin-transform-react-jsx": "^7.21.5",
-    "@babel/plugin-transform-runtime": "^7.21.5",
-    "@babel/preset-env": "^7.21.5",
-    "@babel/preset-react": "^7.21.5",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.21.0",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.21.0",
+    "@babel/preset-react": "^7.21.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-lodash": "^3.3.4",
     "eslint-plugin-babel": "^5.3.1",
@@ -76,7 +76,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-adapter-react-17": "^1.0.5",  // Updated to match React 17
     "enzyme-to-json": "^3.6.2",
     "eslint": "^8.48.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -103,6 +103,6 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^5.3.3",
     "webpack-hot-middleware": "^2.25.3",
-    "webpack-serve": "^1.0.0"
+    "webpack-dev-server": "^4.13.3"  // Replaces webpack-serve
   }
 }
