--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "rc-notification": "^5.1.3",
-    "react": "^17.0.2",
+    "react": "^16.14.0",
     "react-day-picker": "^7.4.10",
-    "react-dom": "^17.0.2",
+    "react-dom": "^16.14.0",
     "react-hot-loader": "^4.13.0",
     "react-resize-detector": "^6.7.5",
     "redux": "^4.2.1",
@@ -75,7 +75,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "enzyme": "^3.11.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.8",  // Replaced with unofficial adapter
+    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^8.48.0",
     "eslint-config-airbnb": "^19.0.4",
