--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -270,13 +270,13 @@ workflows:
                 - /feature*/
                 - /bugfix*/
                 - /hotfix*/
-  deploy:
-    jobs:
-      - publish:
-          context: pm4ml-ci
-          filters:
-            tags:
-              only: /v[0-9]+(\.[0-9]+)*(\-snapshot(\.[0-9]+))?(\-hotfix(\.[0-9]+))?/
-            branches:
-              ignore:
-                - /.*/
+#  deploy:
+#    jobs:
+#      - publish:
+#          context: pm4ml-ci
+#          filters:
+#            tags:
+#              only: /v[0-9]+(\.[0-9]+)*(\-snapshot(\.[0-9]+))?(\-hotfix(\.[0-9]+))?/
+#            branches:
+#              ignore:
+#                - /.*/
