--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@babel/plugin-transform-runtime": "^7.21.0",
     "babel-loader": "^8.2.5",
     "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "highlight.js": "^11.10.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.29.4",
+    "postcss": "^8.1.0",
     "prop-types": "^15.8.1",
     "rc-notification": "^5.1.3",
     "react": "^16.14.0",
@@ -58,6 +60,8 @@
     "redux": "^4.2.1",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
+    "storybook": "^8.3.6",
+    "typescript": "^5.6.3",
     "vkbeautify": "^0.99.3",
     "whatwg-fetch": "^3.6.2"
   },
