--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,13 +69,13 @@ jobs:
           command: *defaults_Dependencies
       - checkout
       - run:
-          name: Update NPM install (using `npm ci`)
-          command: npm ci
+          name: Install dependencies (using `yarn install`)
+          command: yarn install --frozen-lockfile
       - run:
           name: Delete build dependencies
           command: apk del build-dependencies
       - save_cache:
-          key: dependency-cache-v2-{{ checksum "package-lock.json" }}
+          key: dependency-cache-v2-{{ checksum "yarn.lock" }}
           paths:
             - node_modules
 
@@ -88,12 +88,12 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - dependency-cache-v2-{{ checksum "package-lock.json" }}
+          - dependency-cache-v2-{{ checksum "yarn.lock" }}
           paths:
             - node_modules
       - run:
           name: Execute unit tests
-          command: npm test
+          command: yarn test
       - store_test_results:
           path: /home/circleci/project/git/
       - store_artifacts:
@@ -114,7 +114,7 @@ jobs:
           command: docker-compose -f docker-compose.yml -f docker-compose.integration.yml up -d
       - run:
           name: Execute integration tests
-          command: docker exec -it scheme-adapter-int sh -c 'npm run test:int'
+          command: docker exec -it scheme-adapter-int sh -c 'yarn run test:int'
       - run:
           name: Copy results from docker
           command: docker cp scheme-adapter-int:/junit.xml .
@@ -129,10 +129,10 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - dependency-cache-v2-{{ checksum "package-lock.json" }}
+          - dependency-cache-v2-{{ checksum "yarn.lock" }}
       - run:
           name: Execute linting
-          command: npm run lint
+          command: yarn lint
 
   audit-licenses:
     executor: default-docker
@@ -144,7 +144,7 @@ jobs:
           <<: *defaults_license_scanner
       - checkout
       - restore_cache:
-          key: dependency-cache-v2-{{ checksum "package-lock.json" }}
+          key: dependency-cache-v2-{{ checksum "yarn.lock" }}
       - run:
           name: Run the license-scanner
           command: cd /tmp/license-scanner && pathToRepo=$CIRCLE_WORKING_DIRECTORY make run
@@ -167,36 +167,6 @@ jobs:
           root: /tmp
           paths:
             - ./docker-image.tar
-  # publish:
-  #   docker:
-  #     - image: jdrouet/docker-with-buildx:0.9.1
-  #   steps:
-  #     - checkout
-  #     - setup_remote_docker:
-  #         version: default
-  #     - run: docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD"
-  #     - run: |
-  #         docker buildx create --name mycustombuilder --driver docker-container --bootstrap
-  #         docker buildx use mycustombuilder
-  #         docker buildx inspect
-  #     - run: |
-  #         export IMAGE_TAG=$(echo $CIRCLE_TAG | tr -d v)
-  #         echo "tag is $IMAGE_TAG"
-  #         docker buildx build --push \
-  #           --platform linux/arm/v7,linux/arm64/v8,linux/amd64 \
-  #           --tag $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$IMAGE_TAG .
-  #publish:
-  #  executor: default-machine
-  #  steps:
-  #    - checkout
-  #    - run: docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD"
-  #    - run:
-  #        name: Build Docker image and push
-  #        command: |
-  #          export IMAGE_TAG=$(echo $CIRCLE_TAG | tr -d v)
-  #          echo "tag is $IMAGE_TAG"
-  #          docker build --tag $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$IMAGE_TAG .
-  #          docker push $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$IMAGE_TAG
 
   license-scan:
     executor: default-machine
@@ -213,7 +183,6 @@ jobs:
           command: cd /tmp/license-scanner && mode=docker dockerImages=$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:local make run
       - store_artifacts:
           path: /tmp/license-scanner/results
-
 
 ##
 # Workflows
@@ -270,13 +239,3 @@ workflows:
                 - /feature*/
                 - /bugfix*/
                 - /hotfix*/
-#  deploy:
-#    jobs:
-#      - publish:
-#          context: pm4ml-ci
-#          filters:
-#            tags:
-#              only: /v[0-9]+(\.[0-9]+)*(\-snapshot(\.[0-9]+))?(\-hotfix(\.[0-9]+))?/
-#            branches:
-#              ignore:
-#                - /.*/
