--- a/package.json
+++ b/package.json
@@ -77,12 +77,13 @@
     "autoprefixer": "^10.4.20",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-syntax-async-functions": "^6.13.0",
+    "cheerio": "^1.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-adapter-react-16": "^1.15.8",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
@@ -98,6 +99,7 @@
     "fetch-mock": "^11.1.5",
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lorem-ipsum": "^2.0.4",
     "postcss-loader": "^7.3.4",
     "prettier": "^3.0.0",
