--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,17 +143,16 @@ jobs:
   # Vulnerability scan using OWASP Dependency-Check
   Vulnerability Test:
     docker:
-      - image: owasp/dependency-check:latest
-    steps:
-      - checkout
-      - run:
-          name: Run OWASP Dependency-Check
-          command: |
-            dependency-check.sh --project "My Project" --scan ./ --format "HTML" --out ./dependency-check-report.html
-      - store_artifacts:
-          path: ./dependency-check-report.html
-          destination: dependency-check-report.html
-
+    - image: owasp/dependency-check:latest
+  steps:
+    - checkout
+    - run:
+        name: Run OWASP Dependency-Check
+        command: |
+          /usr/share/dependency-check/bin/dependency-check.sh --project "$CIRCLE_PROJECT_REPONAME" --scan ./ --format "HTML" --out ./dependency-check-report.html
+    - store_artifacts:
+        path: ./dependency-check-report.html
+        destination: dependency-check-report.html
   Build:
     executor: default-machine
     steps:
