Fix refences and stuff

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "lint": "eslint --color --fix webpack*.js src",
-    "start": "NODE_ENV=development webpack serve --port 9090 --host 0.0.0.0 webpack.dev.config.js",
+    "start": "cross-env NODE_ENV=development webpack serve --config webpack.dev.config.js --port 9090 --host 0.0.0.0",
     "storybook": "start-storybook",
     "storybook-build": "build-storybook -c .storybook -o .storybook-dist",
     "test": "jest",
@@ -42,6 +42,8 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.20.0",
     "@babel/plugin-transform-react-jsx": "^7.21.0",
     "@babel/plugin-transform-runtime": "^7.21.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "antd": "^5.21.5",
     "babel-loader": "^8.2.5",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-react-hooks": "^4.3.0",
@@ -55,7 +57,7 @@
     "react": "^16.14.0",
     "react-day-picker": "^7.4.10",
     "react-dom": "^16.14.0",
-    "react-hot-loader": "^4.13.0",
+    "react-refresh": "^0.14.2",
     "react-resize-detector": "^6.7.5",
     "redux": "^4.2.1",
     "redux-mock-store": "^1.5.4",
@@ -85,7 +87,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.8",
     "enzyme-to-json": "^3.6.2",
-    "eslint": "^8.57.1",
+    "eslint": "^9.13.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.10.0",
@@ -98,6 +100,7 @@
     "eslint-webpack-plugin": "^4.2.0",
     "fetch-mock": "^11.1.5",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lorem-ipsum": "^2.0.4",
@@ -105,6 +108,7 @@
     "prettier": "^3.0.0",
     "sass": "^1.80.3",
     "sass-loader": "^16.0.2",
+    "sass-migrator": "^2.2.0",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.6",
     "url-loader": "^4.1.1",
